Fix wrapping of lists in tooltips

--- a/packages/liveblocks-react-ui/src/styles/index.css
+++ b/packages/liveblocks-react-ui/src/styles/index.css
@@ -797,6 +797,10 @@
   :where(:first-child) {
     @include capitalize;
   }
+
+  :where(.lb-name) {
+    display: contents;
+  }
 }
 
 /*************************************
